# cookvault

./: .env.https  .env.ngrok  .env.production.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_DEPLOYMENT.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile.prod  MEMORY_OPTIMIZATION_CONFIG.md  README-HTTPS-Testing.md  README-Ngrok-Setup.md  README.md  RENDER_DEPLOYMENT.md  docker-compose.ngrok.yml  docker-compose.prod.yml  init-db.sql  ngrok-backend.yml  ngrok-frontend.yml  pyproject.toml  render-deploy.sh  render.yaml  requirements.txt  start-ngrok.sh  test_connection.py  test_sqlalchemy_connection.py  ui.html
backend/: .env.example  Dockerfile  Dockerfile.render  HISTORICAL_COOKBOOK_SEEDING.md  README.md  debug_images.py  docker-compose.yml  fix_recipe_privacy.py  fix_user_collections.py  gunicorn.conf.py  start.sh  test_session.py  wsgi.py
backend/app/: __init__.py  config.py  exceptions.py
backend/app/api/: __init__.py  auth.py  cookbooks.py  payments.py  public.py  recipe_groups.py  recipes.py
backend/app/models/: __init__.py  payment.py  recipe.py  user.py
backend/app/services/: cloudinary_service.py  google_books_service.py  llm_ocr_service.py  ocr_quality_service.py  ocr_service.py  recipe_parser.py  stripe_service.py
backend/cookbook_db_utils/: __init__.py  cli.py  content_migrator.py  db_manager.py  db_utils.py  dev_helpers.py  google_books_metadata.py  imports.py  migrate_manager.py  pdf_cookbook_seeder.py  pdf_processor.py  pdf_recipe_parser.py  seed_data.py  seed_data_old.py
backend/migrations/: env.py
backend/scripts/: README.md  test_auth.py  test_upload.py
backend/tests/: conftest.py  test_recipes.py
briefs/: FRONTEND_BRIEF.md  PHASE_0_DESIGN_ANALYSIS.md  PROJECT_BRIEF.md
docs/: COOKBOOK_DB_CLI_DOCUMENTATION.md
docs/help/: DEPLOY.md
frontend/: .eslintrc.json  .prettierignore  Dockerfile.render  SPA_ROUTING_FIX.md  deploy.sh  import_progress.json  import_results.json  index.html  nginx.conf  package-lock.json  package.json  render.yaml  tailwind.config.js  vite.config.ts
frontend/public/: 404.html
frontend/scripts/: README.md  import_recipes.py
frontend/src/: App.tsx  index.css
scripts/: setup-https-testing.sh
(+122 files in other folders)
