[project]
name = "app"
version = "0.1.0"
description = "Backend API for Cookle - OCR and recipe digitization platform"
authors = [{ name = "Boudewijn", email = "boudeyz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-migrate>=4.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "anthropic>=0.25.0",
    "redis>=5.0.0",
    "marshmallow>=3.20.0",
    "werkzeug>=3.0.0",
    "numpy>=2.3.1",
    "scikit-image>=0.25.2",
    "flask-bcrypt>=1.0.1",
    "requests>=2.32.4",
    "gunicorn>=21.2.0",
    "flask-talisman>=1.1.0",
    "flask-limiter>=3.5.0",
    "psycopg==3.2.9",
    "pdfplumber>=0.11.7",
    "pdf2image>=1.17.0",
    "pyjwt>=2.10.1",
    "flask-jwt-extended>=4.7.1",
    "stripe>=12.4.0",
    "cloudinary>=1.44.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-stubs>=0.4",
    "pytest>=8.4.0",
]

[project.scripts]
cookbook-db = "cookbook_db_utils.cli:main"
cookbook-db-manager = "cookbook_db_utils.db_manager:main"
cookbook-db-migrate = "cookbook_db_utils.migrate_manager:main"
cookbook-db-seed = "cookbook_db_utils.seed_data:main"
cookbook-db-utils = "cookbook_db_utils.db_utils:main"
cookbook-db-dev = "cookbook_db_utils.dev_helpers:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
sources = { "cookbook_db_utils" = "backend/cookbook_db_utils" }

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["D101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["import-untyped", "no-untyped-def"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[dependency-groups]
dev = []
